--- a/Challenges/Day_01/style.css
+++ b/Challenges/Day_01/style.css
@@ -1,5 +1,5 @@
 body{
-  background-color: #F398BE;
+  background-color: #d0e9e9;
 }
 
 .box{
@@ -9,14 +9,14 @@ body{
   left: 50%;
   transform: translate(-50%, -50%);
   border-radius: 50px;
-  padding: 10px;
+  padding: 100px;
 }
 
 .search{
   color: #9E314B;
-  background-color: #F398BE;
-  width: 50px;
-  height: 50px;
+  background-color: yellow;
+  width: 300px;
+  height: 300px;
   border-radius: 50%;
   display: flex;
   align-items: center;
