--- a/Challenges/Day_20/style.css
+++ b/Challenges/Day_20/style.css
@@ -9,7 +9,7 @@ body {
 
 h1 {
   font-size: 100px;
-  color: #F8B5B6;
+  color: black;
   position: relative;
 }
 
@@ -18,7 +18,7 @@ h1::before {
   position: absolute;
   top: 0%;
   left: 0%;
-  color:#F2637C;
+  color: pink;
   width: 0%;
   overflow: hidden;
   transition: all 0.6s;
